--- a/templates/addcategory.html
+++ b/templates/addcategory.html
@@ -9,12 +9,12 @@
 	<form action="{{ url_for('insert_meal') }}" method="POST" class="col s12">
 
 		<div class="row">
-			<div class="input-field col s9">
+			<div class="input-field col s12 m9">
 				<i class="material-icons prefix">restaurant</i>
 				<input id="meal_course_type" name="meal_course_type" type="text" class="validate">
 				<label for="meal_course_type">Category Name</label>
 			</div>
-			<div class="col s3">
+			<div class="col s12 m3">
 				<button class="btn waves-effect waves-light right" type="submit" name="action">Add Category<i class="material-icons right">playlist_add_check</i></button>
 			</div>
 		</div>
@@ -28,12 +28,12 @@
 	<form action="{{ url_for('insert_cuisine') }}" method="POST" class="col s12">
 
 		<div class="row">
-			<div class="input-field col s9">
+			<div class="input-field col s12 m9">
 				<i class="material-icons prefix">fastfood</i>
 				<input id="cuisine" name="cuisine" type="text" class="validate">
 				<label for="cuisine">Category Name</label>
 			</div>
-			<div class="col s3">
+			<div class="col s12 m3">
 				<button class="btn waves-effect waves-light right" type="submit" name="action">Add Category<i class="material-icons right">playlist_add_check</i></button>
 			</div>
 		</div>
