--- a/static/css/style.css
+++ b/static/css/style.css
@@ -100,6 +100,26 @@ ul.dropdown-content.select-dropdown li span {
     padding-left: 35px;
 }
 
+/*------------ Categories-----------*/
+
+.add-cat-row {
+    margin-bottom: 40px;
+}
+
+.cat-meals {
+    margin-right: 20px;
+}
+
+.cat-cuis {
+    margin-left: 20px;
+}
+
+.cat-header {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+
 
 /*------------Edit Categories-----------*/
 .edit-cat-row {
