--- a/templates/categories.html
+++ b/templates/categories.html
@@ -1,46 +1,59 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div class="row">
-	<div class="row">
-        <h3 class="page-head">Categories</h3>
-	</div>
+<h3 class="page-head">Categories</h3>
 
-    <div class="row">
-        <a href="{{url_for('add_category')}}" class="waves-effect waves-light btn z-depth-3"><i class="material-icons right">playlist_add</i>Add Category</a>
+<div class="row add-cat-row">
+    <div class="col m4 offset-m4">
+        <a href="{{url_for('add_category')}}" class="waves-effect waves-light btn z-depth-3"><i class="material-icons right">playlist_add</i>Add New Category</a>
     </div>
+</div>
+
+<div class="row">
 
 	<div class="col s12 m6">
-		<h5>Meals and Courses</h5>
+		<h5 class="cat-header">Meals and Courses</h5>
 
-		<ul class="collapsible" data-collapsible="accordion">
+		<ul class="collapsible cat-meals" data-collapsible="accordion">
 			{% for meal in meals_courses %}
 			<li>
 				<div class="collapsible-header">
-					<div class="col s10">
+					<div class="col s11">
 						<strong>{{meal.meal_course_type}}</strong>
 					</div>
-					<a href="{{url_for('edit_meal', meal_id=meal._id)}}" class="waves-effect waves-light btn btn_small z-depth-2">Edit</a>
-					<a href="{{url_for('delete_meal', meal_id=meal._id)}}" class="waves-effect waves-light btn btn_small z-depth-2">Delete</a>
-				</div>
+                <div class="col s1"><i class="material-icons yellow-text text-darken-1">expand_more</i></div>
+                </div>
+                <div class="collapsible-body">
+                <div class="row">
+                    <div class="col s12">
+                        <a href="{{url_for('delete_meal', meal_id=meal._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Delete</a>
+                        <a href="{{url_for('edit_meal', meal_id=meal._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Edit</a>
+                    </div>
+                </div>
 			</li>
 			{% endfor %}
 		</ul>
 	</div>
 
 	<div class="col s12 m6">
-		<h5>Cuisines</h5>
+		<h5 class="cat-header">Cuisines</h5>
 
-		<ul class="collapsible" data-collapsible="accordion">
+		<ul class="collapsible cat-cuis" data-collapsible="accordion">
 			{% for cuis in cuisines %}
 			<li>
 				<div class="collapsible-header">
-					<div class="col s10">
+					<div class="col s11">
 						<strong>{{cuis.cuisine}}</strong>
-					</div>
-					<a href="{{url_for('edit_cuisine', cuis_id=cuis._id)}}" class="waves-effect waves-light btn btn_small z-depth-2">Edit</a>
-					<a href="{{url_for('delete_cuisine', cuis_id=cuis._id)}}" class="waves-effect waves-light btn btn_small z-depth-2">Delete</a>
-				</div>
+                    </div>
+                    <div class="col s1"><i class="material-icons yellow-text text-darken-1">expand_more</i></div>
+                </div>
+                    <div class="collapsible-body">
+                <div class="row">
+                    <div class="col s12">
+                        <a href="{{url_for('delete_cuisine', cuis_id=cuis._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Delete</a>
+                        <a href="{{url_for('edit_cuisine', cuis_id=cuis._id)}}" class="waves-effect waves-light btn btn_small z-depth-2 right">Edit</a>
+                    </div>
+                </div>
 			</li>
 			{% endfor %}
 		</ul>
